--- a/src/styles/MainGame.css
+++ b/src/styles/MainGame.css
@@ -1,13 +1,17 @@
 .main-game {
-    position: fixed; 
-    top: 0;
-    left: 0;
     background-image: url('../assets/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 20px;
     width: 100vw;
     height: 100vh;
+    position: fixed;
+    padding:10px;
+    top: 0;
+    left: 0;
     z-index: -100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
