--- a/src/styles/StartMenu.css
+++ b/src/styles/StartMenu.css
@@ -1,20 +1,57 @@
 
 .start-menu {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     color: white;
     width: 100vw;
     height: 100vh;
 }
-  
-.start-menu h1 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+
+/* .start-menu .title {
+    font-family: Impact, Arial Black, Tahoma, Verdana;
+    font-size: 85px; 
+    color: #F7D02C;
+    margin: 0;
+    padding: 0;
+    -webkit-text-stroke-width: 6px;
+    -webkit-text-stroke-color: #034480;
+    letter-spacing: 3px;
+    font-weight: bolder;
+    text-transform: uppercase;
+} */
+
+.start-menu .title {
+    font-family: Impact, Arial Black, Tahoma, Verdana;
+    font-size: 110px;
+    color: #F7D02C;
+    margin: 0;
+    padding: 0;
+    -webkit-text-stroke-width: 6px;
+    -webkit-text-stroke-color: #034480;
+    letter-spacing: 3px;
+    font-weight: bolder;
+    text-transform: uppercase;
 }
-  
-.start-menu h2 {
-    font-size: 1.5rem;
+
+
+
+.start-menu .subheading {
+    font-size: clamp(20px, 10vw, 30px); 
+    font-size:27px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-bottom: 20px;
+    border: solid #034480 4px;
+    border-radius: 5px;
+    background-color: #C8102E;
+    width: 260px;
+    margin: 0;
+    padding: 3px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    letter-spacing: 1px;
+    margin-bottom:40px;
 }
   
 .difficulty-buttons button {
