--- a/src/styles/StartMenu.css
+++ b/src/styles/StartMenu.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: white;
     width: 100vw;
     height: 100vh;
 }
@@ -29,31 +28,37 @@
 .start-menu .subheading {
     font-size:30px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-bottom: 20px;
+    color: white;
     border: solid #034480 4px;
     border-radius: 5px;
     background-color: #C8102E;
     width: 330px;
     margin: 0;
+    margin-bottom:30px;
     padding: 3px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     letter-spacing: 1px;
-    margin-bottom:40px;
     user-select: none;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #000000;
 }
-  
+
 .difficulty-buttons button {
-    background-color: #007bff;
+    background-color: #F7D02C;
+    font-size: 25px;
     border: none;
-    color: white;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 5px;
+    color: black;
+    padding: 10px 25px;
+    margin: 0 7px;
+    border: solid #034480 3px;
+    border-radius: 10px;
     cursor: pointer;
     user-select: none;
+    font-family: Impact, Arial Black, Tahoma, Verdana;
+    letter-spacing: 1px;
 }
-  
+
 .difficulty-buttons button:hover {
-    background-color: #0056b3;
+    background-color: #FBE87A;
+    transform: scale(1.1);
 }
-  
