--- a/src/styles/StartMenu.css
+++ b/src/styles/StartMenu.css
@@ -49,7 +49,7 @@
     border: none;
     color: black;
     padding: 10px 25px;
-    margin: 0 7px;
+    margin: 4px 7px;
     border: solid #034480 3px;
     border-radius: 10px;
     cursor: pointer;
