--- a/src/styles/MainGame.css
+++ b/src/styles/MainGame.css
@@ -1,14 +1,26 @@
 .main-game {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    overflow-y: auto; 
+    padding: 10px;
+    min-height: 100vh;
+}
+
+.main-game-background {
     background-image: url('../assets/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: fixed;
     width: 100vw;
     height: 100vh;
-    position: fixed;
-    padding:10px;
     top: 0;
     left: 0;
-    z-index: -100;
+    z-index: -10; 
 }
+
+
+
 
