--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -23,11 +23,12 @@
 
 .scoreboard .logo .title {
     font-family: Impact, Arial Black, Tahoma, Verdana;
-    font-size: 75px;
+    font-size: 80px;
     color: #F7D02C;
     margin: 0;
+    margin-left: 10px;
     padding: 0;
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: #034480;
     letter-spacing: 2px;
     font-weight: bolder;
@@ -36,7 +37,7 @@
 }
 
 .scoreboard .logo .subheading {
-    font-size: 23px;
+    font-size: 20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
     border: solid #034480 2px;
@@ -44,7 +45,6 @@
     background-color: #C8102E;
     width: 220px;
     margin: 0;
-    margin-bottom:30px;
     padding: 3px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     letter-spacing: 1px;
