--- a/src/styles/StartMenu.css
+++ b/src/styles/StartMenu.css
@@ -5,8 +5,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100vw;
-    height: 100vh;
+    width:100%;
 }
 
 .start-menu .title {
