--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,4 +1,4 @@
-.scoreboard {
+/* .scoreboard {
     display: flex;
     justify-content: flex-start;
     padding: 15px;
@@ -6,6 +6,7 @@
     color: white;
     font-family: 'Arial', sans-serif;
     font-size: 20px;
+    max-width: 1400px;
 }
 
 .scoreboard .logo {
@@ -68,6 +69,106 @@
     user-select: none;
 }
 
+
+.moves-info,
+.misses-info,
+.score-info {
+    display: flex;
+    flex-direction: column;
+    font-size: 27px;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    padding: 10px 15px;
+    border-radius: 5px;
+    margin: 0 10px;
+    height: 30px;
+    font-weight: bold;
+} */
+
+
+
+
+.scoreboard-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+
+.scoreboard {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 15px;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
+    max-width: 1400px;
+    width: 100%;
+}
+
+.scoreboard .logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-right: auto;
+}
+
+.scoreboard .logo:hover {
+    transform: scale(1.1);
+}
+
+.scoreboard .title {
+    font-family: Impact, Arial Black, Tahoma, Verdana;
+    font-size: 80px;
+    color: #F7D02C;
+    margin: 0;
+    margin-left: 10px;
+    padding: 0;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: #034480;
+    letter-spacing: 2px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    user-select: none;
+}
+
+.scoreboard .subheading {
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    border: solid #034480 2px;
+    border-radius: 5px;
+    background-color: #C8102E;
+    width: 220px;
+    margin: 0;
+    padding: 3px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    letter-spacing: 1px;
+    user-select: none;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000000;
+}
+
+.scoreboard .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F7D02C;
+    height: 40px;
+    margin: 10px 20px;
+    padding: 4px;
+    border: solid #034480 3px;
+    border-radius: 5px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 1px;
+    user-select: none;
+}
 
 .moves-info,
 .misses-info,
