--- a/src/styles/GameBoard.css
+++ b/src/styles/GameBoard.css
@@ -1,4 +1,4 @@
-.game-grid {
+/* .game-grid {
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
@@ -7,5 +7,17 @@
     padding: 20px;
     max-width: 95vw;
     min-height:100vh;
+    box-sizing: border-box; 
+} */
+
+
+
+.game-grid {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    max-width: 1500px;
     box-sizing: border-box; 
 }
