--- a/src/styles/GameLogic.css
+++ b/src/styles/GameLogic.css
@@ -4,3 +4,22 @@
     align-items: center;
     width: 100%;
 }
+
+.reset-button {
+    background-color: #C8102E;
+    color: white;
+    font-family: 'Arial', sans-serif;
+    font-size: 40px;
+    padding: 15px 60px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    margin: 25px 0;
+}
+
+.reset-button:hover {
+    background-color: #A00B24;
+    transform: scale(1.05);
+}
