--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,82 +2,59 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 135px;
-    height: 160px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 140px;
+    height: 165px;
     flex-direction: column;
     text-align: center;
 }
-  
+
+.card:hover {
+    transform: scale(1.07);
+}
 
 .card-back {
     display: flex;
     justify-content: center;
     align-items: center;
-    width:inherit;
-    height:inherit;
-    background-size: cover;
+    width: 100%;
+    height: 100%;
     background-color: rgb(38, 84, 143);
-    border: solid #F7D02C 6px;
+    border: solid #F7D02C 7px;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .card-back .back-img {
-    width: 70%;            
-    height: auto;          
+    width: 75%;
+    height: auto;
+    object-fit: cover;
 }
-  
-  
+
 .card-front {
-    background-color: blue;
-    border: solid #F7D02C 6px;
-    width:inherit;
-    height:inherit;
-}
-
-  
-.card-name {
-    background-color: blue;
-    border: solid black 3px;
-}
-
-
-
-
-.logo {
+    background-color: rgba(200, 200, 200, 0.9);
+    border: solid #F7D02C 7px;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-
-.logo .title {
-    font-family: Impact, Arial Black, Tahoma, Verdana;
-    font-size: 30px;
-    color: #F7D02C;
-    margin: 0;
-    margin-left: 10px;
+    justify-content: center;
     padding: 0;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #034480;
-    letter-spacing: 2px;
-    font-weight: bolder;
-    text-transform: uppercase;
-    user-select: none;
+    box-sizing: border-box;
 }
 
-.logo .subheading {
-    font-size: 10px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: white;
-    border: solid #034480 1px;
-    border-radius: 5px;
-    background-color: #C8102E;
-    width: 90px;
+.card-front .card-name {
+    font-size: 23px;
+    font-family: 'Ariel', sans-serif;
+    font-weight: bold;
+    text-transform: capitalize;
     margin: 0;
-    padding: 3px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    letter-spacing: 1px;
-    user-select: none;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #000000;
+    /* letter-spacing: 1px; */
+}
+
+.card-front .card-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
