--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 140px;
-    height: 165px;
+    height: 175px;
     flex-direction: column;
     text-align: center;
     user-select: none;
@@ -46,7 +46,7 @@
 }
 
 .card-front .card-name {
-    font-size: 21px;
+    font-size: 18px;
     font-family: 'Ariel', sans-serif;
     font-weight: bold;
     text-transform: capitalize;
@@ -57,4 +57,20 @@
     width: 100%;
     height: auto;
     object-fit: cover;
+}
+
+
+@media (max-width: 500px) {
+    .card {
+        width: 100px;
+        height: 130px;
+    }
+
+    .card-back, .card-front {
+        border: solid #F7D02C 5px;
+    }
+
+    .card-front .card-name {
+        font-size: 15px;
+    }
 }
